// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return correct chart data object for a single report 1`] = `
Object {
  "datasets": Array [
    Object {
      "data": Array [
        123,
        5,
      ],
      "formatter": [Function],
      "label": "Duration - Avg",
      "order": undefined,
      "type": "line",
      "yAxisID": "axis-0",
    },
  ],
  "labels": Array [
    "foo",
    "bar",
  ],
}
`;

exports[`should return correct chart data object for multi-measure report 1`] = `
Object {
  "datasets": Array [
    Object {
      "data": Array [
        123,
        5,
      ],
      "formatter": [Function],
      "label": "Count",
      "order": undefined,
      "type": "line",
      "yAxisID": "axis-0",
    },
    Object {
      "data": Array [
        175824,
        592754,
      ],
      "formatter": [Function],
      "label": "Duration - Avg",
      "order": undefined,
      "type": "line",
      "yAxisID": "axis-1",
    },
  ],
  "labels": Array [
    "foo",
    "bar",
  ],
}
`;
